# ForestGame-Haskell-app

./: CHANGELOG.md  ForestGame.cabal  LICENSE
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/Forest/: Level1.hs
src/User/Actions/: Battle.hs  Move.hs
