cabal-version:      3.0
name:               ForestGame
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             tuvu
maintainer:         quangtu.vu@gmail.com
copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable ForestGame
    import:           warnings
    main-is:          Main.hs
    other-modules:    Forest.Level1
                      ,User.Actions.Move,User.Actions.Battle
    build-depends:    base ^>=4.17.2.1
                      ,random^>=1.2.1.2
    hs-source-dirs:   app, src
    default-language: Haskell2010

    default-extensions:  NumericUnderscores, TypeApplications,RecordWildCards,NamedFieldPuns


-- ,NamedFieldPuns,RecordWildCards,